Backing up work. Some build changes to be able to work with Java 9. Trying to animate output from MathJax